moved db to resources